# copilot-lmstudio-proxy

./: .gitignore  Cargo.toml  README.md
src/: main.rs
